--- a/admin.html
+++ b/admin.html
@@ -3,223 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard – KhanceptDesigns</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<title>KhanceptDesigns – Admin Editor</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-/* ===== GLOBAL ===== */
 body {
-    margin: 0;
     font-family: "Poppins", sans-serif;
-    background: #f7f7f7;
-    display: flex;
-    height: 100vh;
+    margin:0;
+    padding:0;
+    background:#f5f5f5;
+    color:#222;
 }
-
-/* ===== SIDEBAR ===== */
-.sidebar {
-    width: 250px;
-    background: #000;
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
+header {
+    text-align:center;
+    padding:40px 20px;
+    background:#111;
+    color:white;
 }
-
-.sidebar h2 {
-    margin: 0 0 30px;
-    font-size: 26px;
-    text-align: center;
-    font-weight: 600;
+header h1 { margin:0; font-size:2rem; }
+.container { max-width:1000px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1);}
+form input, form button {
+    display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc;
 }
-
-.sidebar a {
-    display: block;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 12px 15px;
-    border-radius: 8px;
-    margin-bottom: 8px;
-    transition: 0.3s;
-}
-
-.sidebar a:hover {
-    background: #333;
-}
-
-/* ===== MAIN AREA ===== */
-.main {
-    flex: 1;
-    padding: 25px;
-    overflow-y: auto;
-}
-
-.topnav {
-    background: white;
-    padding: 15px 20px;
-    border-radius: 10px;
-    margin-bottom: 25px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-}
-
-.topnav h1 {
-    margin: 0;
-    font-size: 24px;
-    font-weight: 600;
-}
-
-/* ===== FORM ===== */
-#productForm {
-    background: white;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    margin-bottom: 30px;
-    max-width: 600px;
-}
-
-#productForm input,
-#productForm textarea {
-    width: 100%;
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 15px;
-}
-
-#productForm button {
-    width: 100%;
-    padding: 12px;
-    background: #000;
-    color: white;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-#productForm button:hover {
-    background: #333;
-}
-
-/* ===== TABLE ===== */
-.table-container {
-    background: white;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-table th {
-    background: #000;
-    color: white;
-    padding: 12px;
-    text-align: left;
-    font-weight: 500;
-}
-
-table td {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-}
-
-.action-btn {
-    padding: 5px 12px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    color: white;
-}
-
-.delete-btn {
-    background: #d40000;
-}
-
-.delete-btn:hover {
-    background: #a00000;
-}
-
-.edit-btn {
-    background: #1E90FF;
-    margin-right: 5px;
-}
-
-.edit-btn:hover {
-    background: #0c6dd8;
-}
-
-/* MOBILE */
-@media(max-width: 900px){
-    .sidebar {
-        display: none;
-    }
-}
+form button { background:#111; color:white; border:none; cursor:pointer; transition:0.3s;}
+form button:hover { background:#333; }
+table { width:100%; border-collapse: collapse; margin-top:20px; }
+table, th, td { border:1px solid #ccc; }
+th, td { padding:10px; text-align:left; }
+.edit-btn, .delete-btn { padding:6px 10px; margin-right:5px; border:none; border-radius:6px; cursor:pointer; }
+.edit-btn { background:#1E90FF; color:white; }
+.delete-btn { background:#d40000; color:white; }
 </style>
 </head>
 <body>
 
-<!-- ===== SIDEBAR ===== -->
-<div class="sidebar">
-    <h2>Admin Panel</h2>
+<header>
+<h1>KhanceptDesigns – Admin Editor</h1>
+<p>Manage your products here. All changes update GitHub automatically.</p>
+</header>
 
-    <a href="#">Dashboard</a>
-    <a href="#add-product">Add Product</a>
-    <a href="#products">All Products</a>
-</div>
+<div class="container">
+<h2>Add / Edit Product</h2>
 
-<!-- ===== MAIN CONTENT ===== -->
-<div class="main">
+<form id="productForm">
+    <input type="hidden" id="productId" />
+    <input type="text" id="name" placeholder="Product Name" required />
+    <input type="text" id="desc" placeholder="Product Description" required />
+    <input type="text" id="img" placeholder="Image URL" required />
+    <input type="number" step="0.01" id="salePrice" placeholder="Sale Price" required />
+    <input type="number" step="0.01" id="oldPrice" placeholder="Old Price (optional)" />
+    <input type="text" id="link" placeholder="Buy Link" required />
+    <input type="text" id="category" placeholder="Category (optional)" />
+    <input type="text" id="token" placeholder="GitHub Token" required />
+    <button type="submit">Save Product</button>
+</form>
 
-    <div class="topnav">
-        <h1>KhanceptDesigns – Admin Dashboard</h1>
-    </div>
-
-    <!-- ===== PRODUCT FORM ===== -->
-    <form id="productForm">
-        <h2>Add / Update Product</h2>
-
-        <input type="number" id="productId" placeholder="Product ID (unique)" required>
-        <input type="text" id="name" placeholder="Product Name" required>
-        <textarea id="desc" placeholder="Product Description"></textarea>
-        <input type="text" id="img" placeholder="Image URL" required>
-        <input type="number" id="salePrice" placeholder="Sale Price" required>
-        <input type="number" id="oldPrice" placeholder="Old Price (optional)">
-        <input type="text" id="link" placeholder="Product Link" required>
-        <input type="text" id="category" placeholder="Category (optional)">
-        
-        <input type="password" id="token" placeholder="GitHub Token" required>
-
-        <button type="submit">Save Product</button>
-    </form>
-
-    <!-- ===== PRODUCTS TABLE ===== -->
-    <div class="table-container">
-        <h2>All Products</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Category</th>
-                    <th>Price</th>
-                    <th>Old Price</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="productTable"></tbody>
-        </table>
-    </div>
-
-</div>
+<h2>Products Table</h2>
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Sale Price</th>
+            <th>Old Price</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody id="productTable">
+        <!-- Products will render here -->
+    </tbody>
+</table>
 
 <script src="admin.js"></script>
+</div>
 
 </body>
 </html>
