--- a/admin.html
+++ b/admin.html
@@ -12,22 +12,100 @@ body {
     margin:0; padding:0;
     background:#f5f5f5; color:#222;
 }
-header { text-align:center; padding:40px 20px; background:#111; color:white; }
+header {
+    text-align:center; padding:30px 20px;
+    background:#111; color:white;
+}
 header h1 { margin:0; font-size:2rem; }
 header p { margin-top:5px; opacity:0.8; }
-.container { max-width:1000px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); }
-form input, form button { display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc; }
-form button { background:#111; color:white; border:none; cursor:pointer; transition:0.3s;}
+
+.container {
+    max-width:1100px;
+    margin:30px auto;
+    background:white;
+    padding:30px 40px;
+    border-radius:12px;
+    box-shadow:0 5px 20px rgba(0,0,0,0.1);
+}
+
+/* Form styling */
+form {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:20px;
+}
+form input, form button {
+    padding:12px 15px;
+    border-radius:8px;
+    border:1px solid #ccc;
+    width:100%;
+    box-sizing:border-box;
+}
+form button {
+    grid-column: 1 / -1;
+    background:#111;
+    color:white;
+    border:none;
+    cursor:pointer;
+    transition:0.3s;
+}
 form button:hover { background:#333; }
-table { width:100%; border-collapse: collapse; margin-top:20px; }
-table, th, td { border:1px solid #ccc; }
-th, td { padding:10px; text-align:left; }
-.edit-btn, .delete-btn { padding:6px 10px; margin-right:5px; border:none; border-radius:6px; cursor:pointer; }
+
+/* GitHub Token styling */
+.token-container {
+    display:flex;
+    gap:10px;
+    margin-bottom:15px;
+}
+.token-container input { flex:1; padding:12px; border-radius:8px; border:1px solid #ccc; }
+.token-container button {
+    flex:none;
+    padding:12px 20px;
+    border:none;
+    border-radius:8px;
+    background:#111;
+    color:white;
+    cursor:pointer;
+    transition:0.3s;
+}
+.token-container button:hover { background:#333; }
+
+/* Table styling */
+table {
+    width:100%;
+    border-collapse: collapse;
+    margin-top:30px;
+    font-size:0.95rem;
+}
+th, td {
+    padding:12px;
+    border:1px solid #ccc;
+    text-align:left;
+}
+th {
+    background:#f0f0f0;
+    font-weight:600;
+}
+.edit-btn, .delete-btn, .move-btn {
+    padding:6px 10px;
+    margin-right:5px;
+    border:none;
+    border-radius:6px;
+    cursor:pointer;
+    font-size:0.85rem;
+}
 .edit-btn { background:#1E90FF; color:white; }
 .delete-btn { background:#d40000; color:white; }
-.token-container { display:flex; align-items:center; gap:10px; margin-bottom:15px; }
-.token-container input { flex:1; }
-.token-container button { flex:none; padding:10px; }
+.move-btn { background:#28a745; color:white; }
+.edit-btn:hover { background:#3399ff; }
+.delete-btn:hover { background:#ff3b3b; }
+.move-btn:hover { background:#40c057; }
+
+@media(max-width:800px){
+    form { grid-template-columns: 1fr; }
+    .token-container { flex-direction:column; }
+    .token-container button { width:100%; }
+}
 </style>
 </head>
 <body>
@@ -81,13 +159,13 @@ const FILE_PATH = "products.json";
 const BRANCH = "main";
 let GITHUB_TOKEN = "";
 
-// --- Toggle token visibility
+// Toggle token visibility
 function toggleToken(){
   const t = document.getElementById("token");
   t.type = t.type === "password" ? "text" : "password";
 }
 
-// --- Load products
+// Load products
 async function loadProducts(){
   try{
     const res = await fetch(`https://raw.githubusercontent.com/${GITHUB_USERNAME}/${REPO_NAME}/${BRANCH}/${FILE_PATH}`);
@@ -96,10 +174,9 @@ async function loadProducts(){
   }catch(err){ alert("Error loading products: "+err.message); return []; }
 }
 
-// --- Save products to GitHub
+// Save products to GitHub
 async function saveProducts(products){
   if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
-
   try{
     const fileInfoRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Accept":"application/vnd.github+json" }
@@ -117,15 +194,13 @@ async function saveProducts(products){
         branch:BRANCH
       })
     });
-
     if(!updateRes.ok) throw new Error(await updateRes.text());
-    console.log("Products updated! Ensure featured.html & sale.html fetch products.json to reflect changes live.");
+    console.log("Products updated! Featured.html & sale.html will reflect changes.");
     return await updateRes.json();
-
   }catch(err){ alert("Error saving products: "+err.message); }
 }
 
-// --- Render table
+// Render table
 async function renderTable(){
   const products = await loadProducts();
   const tbody = document.getElementById("productTable");
@@ -141,14 +216,14 @@ async function renderTable(){
       <td>
         <button class="edit-btn" onclick="fillForm(${p.id})">Edit</button>
         <button class="delete-btn" onclick="deleteProduct(${p.id})">Delete</button>
-        <button class="edit-btn" onclick="moveToTop(${p.id})">Move to Top</button>
+        <button class="move-btn" onclick="moveToTop(${p.id})">Move to Top</button>
       </td>
     `;
     tbody.appendChild(tr);
   });
 }
 
-// --- Add/Edit Product
+// Add/Edit Product
 async function addProduct(product){
   let products = await loadProducts();
   if(!product.id) product.id = products.length ? Math.max(...products.map(p=>p.id))+1 : 1;
@@ -159,10 +234,10 @@ async function addProduct(product){
   renderTable();
 }
 
-// --- Delete Product
+// Delete Product
 async function deleteProduct(id){
   if(!confirm("Delete this product?")) return;
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token to delete product:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
   let products = await loadProducts();
   products = products.filter(p=>p.id!==id);
   await saveProducts(products);
@@ -170,9 +245,9 @@ async function deleteProduct(id){
   renderTable();
 }
 
-// --- Move Product to Top
+// Move Product to Top
 async function moveToTop(id){
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token to move product:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
   let products = await loadProducts();
   const index = products.findIndex(p => p.id === id);
   if(index === -1) return alert("Product not found!");
@@ -183,7 +258,7 @@ async function moveToTop(id){
   renderTable();
 }
 
-// --- Fill form
+// Fill form
 async function fillForm(id){
   const products = await loadProducts();
   const p = products.find(x=>x.id===id);
@@ -198,7 +273,7 @@ async function fillForm(id){
   document.getElementById("category").value = p.category||"";
 }
 
-// --- Form submit
+// Form submit
 document.getElementById("productForm").addEventListener("submit", async e=>{
   e.preventDefault();
   GITHUB_TOKEN = document.getElementById("token").value.trim();
@@ -217,7 +292,7 @@ document.getElementById("productForm").addEventListener("submit", async e=>{
   e.target.reset();
 });
 
-// --- Initial render
+// Initial render
 renderTable();
 </script>
 
