--- a/admin.html
+++ b/admin.html
@@ -5,94 +5,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>KhanceptDesigns – Admin Editor</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
 <style>
 body {
     font-family: "Poppins", sans-serif;
     margin:0; padding:0;
     background:#f5f5f5; color:#222;
 }
-header {
-    text-align:center; padding:30px 20px;
-    background:#111; color:white;
-}
+header { text-align:center; padding:40px 20px; background:#111; color:white; }
 header h1 { margin:0; font-size:2rem; }
 header p { margin-top:5px; opacity:0.8; }
+.container { max-width:1000px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); }
 
-.container {
-    max-width:1100px;
-    margin:30px auto;
-    background:white;
-    padding:30px 40px;
-    border-radius:12px;
-    box-shadow:0 5px 20px rgba(0,0,0,0.1);
-}
-
-/* Form styling */
-form {
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    gap:20px;
-}
 form input, form button {
-    padding:12px 15px;
-    border-radius:8px;
-    border:1px solid #ccc;
-    width:100%;
-    box-sizing:border-box;
+    display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc;
 }
-form button {
-    grid-column: 1 / -1;
-    background:#111;
-    color:white;
-    border:none;
-    cursor:pointer;
-    transition:0.3s;
-}
+form button { background:#111; color:white; border:none; cursor:pointer; transition:0.3s;}
 form button:hover { background:#333; }
 
-/* GitHub Token styling */
-.token-container {
-    display:flex;
-    gap:10px;
-    margin-bottom:15px;
-}
-.token-container input { flex:1; padding:12px; border-radius:8px; border:1px solid #ccc; }
-.token-container button {
-    flex:none;
-    padding:12px 20px;
-    border:none;
-    border-radius:8px;
-    background:#111;
-    color:white;
-    cursor:pointer;
-    transition:0.3s;
-}
-.token-container button:hover { background:#333; }
-
 /* Table styling */
-table {
-    width:100%;
-    border-collapse: collapse;
-    margin-top:30px;
-    font-size:0.95rem;
-}
-th, td {
-    padding:12px;
-    border:1px solid #ccc;
-    text-align:left;
-}
-th {
-    background:#f0f0f0;
-    font-weight:600;
-}
+table { width:100%; border-collapse: collapse; margin-top:30px; font-size:0.85rem; }
+th, td { padding:10px; border:1px solid #ccc; text-align:left; vertical-align:middle; }
+th { background:#f0f0f0; font-weight:600; }
+
+/* Actions column */
+td:last-child { max-width:220px; white-space:nowrap; }
+
+/* Buttons */
 .edit-btn, .delete-btn, .move-btn {
-    padding:6px 10px;
-    margin-right:5px;
-    border:none;
-    border-radius:6px;
-    cursor:pointer;
-    font-size:0.85rem;
+    padding:5px 8px; margin:2px 2px 2px 0; border:none; border-radius:6px; cursor:pointer; font-size:0.75rem;
 }
 .edit-btn { background:#1E90FF; color:white; }
 .delete-btn { background:#d40000; color:white; }
@@ -101,10 +41,19 @@ th {
 .delete-btn:hover { background:#ff3b3b; }
 .move-btn:hover { background:#40c057; }
 
+/* Token input */
+.token-container { display:flex; align-items:center; gap:10px; margin-bottom:15px; }
+.token-container input { flex:1; }
+.token-container button { flex:none; padding:10px; }
+
+/* Responsive table for small screens */
 @media(max-width:800px){
-    form { grid-template-columns: 1fr; }
-    .token-container { flex-direction:column; }
-    .token-container button { width:100%; }
+    table, thead, tbody, th, td, tr { display:block; width:100%; }
+    tr { margin-bottom:15px; border-bottom:1px solid #ccc; }
+    th, td { text-align:right; padding-left:50%; position:relative; }
+    th::before, td::before { position:absolute; left:10px; width:45%; white-space:nowrap; font-weight:600; text-align:left; }
+    th::before { content:attr(data-label); }
+    td::before { content:attr(data-label); }
 }
 </style>
 </head>
@@ -140,12 +89,12 @@ th {
 <table>
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Sale Price</th>
-            <th>Old Price</th>
-            <th>Actions</th>
+            <th data-label="ID">ID</th>
+            <th data-label="Name">Name</th>
+            <th data-label="Category">Category</th>
+            <th data-label="Sale Price">Sale Price</th>
+            <th data-label="Old Price">Old Price</th>
+            <th data-label="Actions">Actions</th>
         </tr>
     </thead>
     <tbody id="productTable"></tbody>
@@ -159,13 +108,13 @@ const FILE_PATH = "products.json";
 const BRANCH = "main";
 let GITHUB_TOKEN = "";
 
-// Toggle token visibility
+// --- Toggle token visibility
 function toggleToken(){
   const t = document.getElementById("token");
   t.type = t.type === "password" ? "text" : "password";
 }
 
-// Load products
+// --- Load products
 async function loadProducts(){
   try{
     const res = await fetch(`https://raw.githubusercontent.com/${GITHUB_USERNAME}/${REPO_NAME}/${BRANCH}/${FILE_PATH}`);
@@ -174,9 +123,10 @@ async function loadProducts(){
   }catch(err){ alert("Error loading products: "+err.message); return []; }
 }
 
-// Save products to GitHub
+// --- Save products to GitHub
 async function saveProducts(products){
   if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
+
   try{
     const fileInfoRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Accept":"application/vnd.github+json" }
@@ -194,13 +144,14 @@ async function saveProducts(products){
         branch:BRANCH
       })
     });
+
     if(!updateRes.ok) throw new Error(await updateRes.text());
-    console.log("Products updated! Featured.html & sale.html will reflect changes.");
     return await updateRes.json();
+
   }catch(err){ alert("Error saving products: "+err.message); }
 }
 
-// Render table
+// --- Render table
 async function renderTable(){
   const products = await loadProducts();
   const tbody = document.getElementById("productTable");
@@ -223,7 +174,7 @@ async function renderTable(){
   });
 }
 
-// Add/Edit Product
+// --- Add/Edit Product
 async function addProduct(product){
   let products = await loadProducts();
   if(!product.id) product.id = products.length ? Math.max(...products.map(p=>p.id))+1 : 1;
@@ -234,10 +185,10 @@ async function addProduct(product){
   renderTable();
 }
 
-// Delete Product
+// --- Delete Product
 async function deleteProduct(id){
   if(!confirm("Delete this product?")) return;
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token to delete product:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
   let products = await loadProducts();
   products = products.filter(p=>p.id!==id);
   await saveProducts(products);
@@ -245,20 +196,20 @@ async function deleteProduct(id){
   renderTable();
 }
 
-// Move Product to Top
+// --- Move product to top
 async function moveToTop(id){
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token to move product:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
   let products = await loadProducts();
-  const index = products.findIndex(p => p.id === id);
-  if(index === -1) return alert("Product not found!");
-  const [product] = products.splice(index, 1);
+  const index = products.findIndex(p=>p.id===id);
+  if(index===-1) return alert("Product not found!");
+  const [product] = products.splice(index,1);
   products.unshift(product);
   await saveProducts(products);
-  alert(`✅ Product "${product.name}" moved to top!`);
+  alert(`✅ "${product.name}" moved to top!`);
   renderTable();
 }
 
-// Fill form
+// --- Fill form
 async function fillForm(id){
   const products = await loadProducts();
   const p = products.find(x=>x.id===id);
@@ -273,7 +224,7 @@ async function fillForm(id){
   document.getElementById("category").value = p.category||"";
 }
 
-// Form submit
+// --- Form submit
 document.getElementById("productForm").addEventListener("submit", async e=>{
   e.preventDefault();
   GITHUB_TOKEN = document.getElementById("token").value.trim();
@@ -292,7 +243,7 @@ document.getElementById("productForm").addEventListener("submit", async e=>{
   e.target.reset();
 });
 
-// Initial render
+// --- Initial render
 renderTable();
 </script>
 
