--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>KhanceptDesigns – Admin Editor</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <style>
 body {
     font-family: "Poppins", sans-serif;
@@ -14,52 +15,68 @@ body {
 header { text-align:center; padding:40px 20px; background:#111; color:white; }
 header h1 { margin:0; font-size:2rem; }
 header p { margin-top:5px; opacity:0.8; }
-.container { max-width:1100px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); }
-
-/* Form styling */
-form input, form button {
-    display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc;
-}
+.container { max-width:1000px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); }
+form input, form button { display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc; }
 form button { background:#111; color:white; border:none; cursor:pointer; transition:0.3s;}
 form button:hover { background:#333; }
-
-/* Token input */
+table { width:100%; border-collapse: collapse; margin-top:20px; font-size:0.9rem; }
+table, th, td { border:1px solid #ccc; }
+th, td { padding:8px; text-align:left; }
+.edit-btn, .delete-btn, .top-btn { padding:4px 8px; margin-right:5px; border:none; border-radius:6px; cursor:pointer; font-size:0.85rem; }
+.edit-btn { background:#1E90FF; color:white; }
+.delete-btn { background:#d40000; color:white; }
+.top-btn { background:#ffa500; color:white; }
 .token-container { display:flex; align-items:center; gap:10px; margin-bottom:15px; }
 .token-container input { flex:1; }
 .token-container button { flex:none; padding:10px; }
 
-/* Modern product cards table */
-.product-card-table { display:flex; flex-direction:column; gap:15px; }
+/* --- Smaller product cards --- */
 .product-card {
-    display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center;
-    padding:15px 20px; background:white; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.08);
-    transition: transform 0.2s, box-shadow 0.2s;
+    width: 150px;
+    background:white;
+    border-radius:12px;
+    overflow:hidden;
+    box-shadow:0 5px 15px rgba(0,0,0,0.1);
+    transition:0.3s;
+    display:flex;
+    flex-direction:column;
+    cursor:pointer;
+    margin-bottom:15px;
 }
-.product-card:hover { transform: translateY(-3px); box-shadow:0 8px 20px rgba(0,0,0,0.12); }
-
-.product-card .info { flex:1 1 60%; }
-.product-card .info h3 { margin:0 0 5px 0; font-size:1.1rem; font-weight:600; }
-.product-card .info p { margin:2px 0; font-size:0.85rem; opacity:0.8; }
-
-.product-card .prices { text-align:right; flex:0 0 120px; font-size:0.85rem; }
-.product-card .prices .old { text-decoration:line-through; color:#777; margin-right:5px; }
-.product-card .actions { display:flex; gap:5px; flex:0 0 auto; }
-.product-card button {
-    padding:5px 8px; border:none; border-radius:6px; cursor:pointer; font-size:0.75rem;
-    transition:0.2s;
+.product-card img {
+    width:100%;
+    height:120px;
+    object-fit:contain;
+    background:#f9f9f9;
 }
-.edit-btn { background:#1E90FF; color:white; }
-.delete-btn { background:#d40000; color:white; }
-.move-btn { background:#28a745; color:white; }
-.edit-btn:hover { background:#3399ff; }
-.delete-btn:hover { background:#ff3b3b; }
-.move-btn:hover { background:#40c057; }
-
-/* Responsive adjustments */
-@media(max-width:700px){
-    .product-card { flex-direction:column; align-items:flex-start; }
-    .product-card .prices, .product-card .actions { text-align:left; margin-top:10px; }
+.product-info {
+    padding:8px;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-end;
+    align-items:center;
+    flex-grow:1;
+    gap:4px;
 }
+.product-info h3 {
+    margin:0;
+    font-size:0.9rem;
+    text-align:center;
+}
+.product-info .price {
+    font-size:1rem;
+    font-weight:700;
+    color:#d40000;
+}
+.product-info a {
+    padding:5px 10px;
+    font-size:0.85rem;
+    background:#000;
+    color:white;
+    text-decoration:none;
+    border-radius:6px;
+}
+.product-info a:hover { background:#333; }
 </style>
 </head>
 <body>
@@ -72,6 +89,7 @@ form button:hover { background:#333; }
 <div class="container">
 <h2>Add / Edit Product</h2>
 
+<!-- GitHub Token Input -->
 <div class="token-container">
   <input type="password" id="token" placeholder="Enter GitHub Token" required>
   <button type="button" onclick="toggleToken()">Show/Hide</button>
@@ -89,8 +107,21 @@ form button:hover { background:#333; }
     <button type="submit">Save Product</button>
 </form>
 
-<h2>Products Dashboard</h2>
-<div id="productTable" class="product-card-table"></div>
+<h2>Products Table</h2>
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Sale Price</th>
+            <th>Old Price</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody id="productTable"></tbody>
+</table>
+</div>
 
 <script>
 // --- CONFIG ---
@@ -101,27 +132,32 @@ const BRANCH = "main";
 let GITHUB_TOKEN = "";
 
 // --- Toggle token visibility
-function toggleToken(){ const t=document.getElementById("token"); t.type=t.type==="password"?"text":"password"; }
+function toggleToken(){
+  const t = document.getElementById("token");
+  t.type = t.type === "password" ? "text" : "password";
+}
 
 // --- Load products
 async function loadProducts(){
   try{
-    const res=await fetch(`https://raw.githubusercontent.com/${GITHUB_USERNAME}/${REPO_NAME}/${BRANCH}/${FILE_PATH}`);
+    const res = await fetch(`https://raw.githubusercontent.com/${GITHUB_USERNAME}/${REPO_NAME}/${BRANCH}/${FILE_PATH}`);
     if(!res.ok) throw new Error("Failed to load products");
     return await res.json();
   }catch(err){ alert("Error loading products: "+err.message); return []; }
 }
 
-// --- Save products
+// --- Save products to GitHub
 async function saveProducts(products){
   if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
+
   try{
-    const fileInfoRes=await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
+    const fileInfoRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Accept":"application/vnd.github+json" }
     });
     if(!fileInfoRes.ok) throw new Error(await fileInfoRes.text());
-    const fileInfo=await fileInfoRes.json();
-    const updateRes=await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
+    const fileInfo = await fileInfoRes.json();
+
+    const updateRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       method:"PUT",
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Content-Type":"application/json", "Accept":"application/vnd.github+json" },
       body: JSON.stringify({
@@ -131,37 +167,44 @@ async function saveProducts(products){
         branch:BRANCH
       })
     });
+
     if(!updateRes.ok) throw new Error(await updateRes.text());
     return await updateRes.json();
   }catch(err){ alert("Error saving products: "+err.message); }
 }
 
-// --- Render product cards
+// --- Render table
 async function renderTable(){
   const products = await loadProducts();
-  const table = document.getElementById("productTable");
-  table.innerHTML = "";
+  const tbody = document.getElementById("productTable");
+  tbody.innerHTML = "";
   products.forEach(p=>{
-    const div = document.createElement("div");
-    div.className = "product-card";
-    div.innerHTML = `
-      <div class="info">
-        <h3>${p.name}</h3>
-        <p>${p.desc}</p>
-        <p>Category: ${p.category||"-"}</p>
-      </div>
-      <div class="prices">
-        ${p.oldPrice? `<span class="old">$${p.oldPrice}</span>` : "" }
-        <span class="sale">$${p.salePrice}</span>
-      </div>
-      <div class="actions">
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${p.id}</td>
+      <td>${p.name}</td>
+      <td>${p.category||"-"}</td>
+      <td>$${p.salePrice}</td>
+      <td>${p.oldPrice? "$"+p.oldPrice:"-"}</td>
+      <td>
+        <button class="top-btn" onclick="moveToTop(${p.id})">Top</button>
         <button class="edit-btn" onclick="fillForm(${p.id})">Edit</button>
         <button class="delete-btn" onclick="deleteProduct(${p.id})">Delete</button>
-        <button class="move-btn" onclick="moveToTop(${p.id})">Move to Top</button>
-      </div>
+      </td>
     `;
-    table.appendChild(div);
+    tbody.appendChild(tr);
   });
+}
+
+// --- Move product to top
+async function moveToTop(id){
+  let products = await loadProducts();
+  const index = products.findIndex(p=>p.id===id);
+  if(index<0) return alert("Product not found!");
+  const [product] = products.splice(index,1);
+  products.unshift(product);
+  await saveProducts(products);
+  renderTable();
 }
 
 // --- Add/Edit Product
@@ -178,24 +221,11 @@ async function addProduct(product){
 // --- Delete Product
 async function deleteProduct(id){
   if(!confirm("Delete this product?")) return;
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token to delete product:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
   let products = await loadProducts();
   products = products.filter(p=>p.id!==id);
   await saveProducts(products);
   alert("✅ Product deleted!");
-  renderTable();
-}
-
-// --- Move product to top
-async function moveToTop(id){
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
-  let products = await loadProducts();
-  const index = products.findIndex(p=>p.id===id);
-  if(index===-1) return alert("Product not found!");
-  const [product] = products.splice(index,1);
-  products.unshift(product);
-  await saveProducts(products);
-  alert(`✅ "${product.name}" moved to top!`);
   renderTable();
 }
 
@@ -237,6 +267,5 @@ document.getElementById("productForm").addEventListener("submit", async e=>{
 renderTable();
 </script>
 
-</div>
 </body>
 </html>
